[tool.poetry]
name = "devmentor-be103-python"
version = "0.1.0"
description = ""
authors = ["Jonny <ji394su311203106@gmail.com>"]
readme = "README.md"
packages = [{include = "devmentor_be103_python"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.25"
pymysql = "^1.1.0"
cryptography = "^42.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
