[tool.poetry]
name = "devmentor-be103-python"
version = "0.1.0"
description = ""
authors = ["Jonny <ji394su311203106@gmail.com>"]
readme = "README.md"
packages = [{include = "devmentor-BE103-Python"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
sqlalchemy = "^2.0.25"
pymysql = "^1.1.0"
cryptography = "^42.0.1"
alembic = "^1.13.1"
uvicorn = "^0.30.1"
pydantic-core = "^2.20.0"
pyjwt = "^2.8.0"
python-multipart = "^0.0.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
